# r-meter

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: executor.rs  logging.rs  main.rs  metrics.rs  models.rs
src/executor/: arg_parser.rs  args_executor.rs
src/logging/: log_initializer.rs
src/metrics/: aggregator_timer.rs  basic_timer.rs  client.rs
src/models/: duration_output.rs  http_methods.rs
