[package]
name = "r-meter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.4"
log = "0.4.14"
env_logger = "0.9.0"
reqwest = { version = "0.11", features = ["blocking"] }
clap = "2.33.3"
threadpool = "1.8.1"